# program-discovery

./: .gitignore  CMakeLists.txt  Makefile  README.md  convert_ann_benchmark_datasets.py  convert_bigann_datasets.py  convert_spacev_dataset.py
docs/: conf.py
experiments/: data_loader.py  run-benchmark.py
include/flatnav/index/: FlexibleIndex.h  Index.h
program_discovery/: Dockerfile  Makefile  abstractions.py  evaluate.py  pyproject.toml  runner.sh
program_discovery/plotting/: metrics.py
python-bindings/: get-wheel-key.py  setup.py
python-bindings/src/flatnav/: __init__.py  bindings.cpp
tools/: construct_npy.cpp  query_npy.cpp
